--- a/NMA-Project/.vscode/launch.json
+++ b/NMA-Project/.vscode/launch.json
@@ -4,7 +4,12 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
-
+        {
+            "type": "java",
+            "name": "Launch App",
+            "request": "launch",
+            "mainClass": "App",
+            "projectName": "NMA-Project_67a23a5e"
+        }
     ]
 }
