Removed previous node
Removed the previous node attribute from the node class. For re-ordering the list, a node variable is used in the function to keep track of the previous node.

--- a/NMA-Project/.vscode/launch.json
+++ b/NMA-Project/.vscode/launch.json
@@ -9,6 +9,20 @@
             "name": "Launch App",
             "request": "launch",
             "mainClass": "App",
+            "projectName": "NMA-Project-Copy_b4a16b05"
+        },
+        {
+            "type": "java",
+            "name": "Launch App",
+            "request": "launch",
+            "mainClass": "App",
+            "projectName": "NMA-Project_69b7d720"
+        },
+        {
+            "type": "java",
+            "name": "Launch App",
+            "request": "launch",
+            "mainClass": "App",
             "projectName": "NMA-Project_67a23a5e"
         }
     ]
